# slate-notes

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.github/scripts/: extract-changelog.cjs
.github/workflows/: ci.yml  release.yml
.opencode/skills/frontend-product-design/: SKILL.md
docs/: product-requirements.md  technical-design.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: mod.rs  notes_service.rs  secure_notes.rs  vault_service.rs
src-tauri/src/commands/: mod.rs  notes.rs  vault.rs
src-tauri/src/domain/: encryption.rs  mod.rs  note.rs  vault.rs
src-tauri/src/infra/: memory_note_repository.rs  memory_vault_repository.rs  mod.rs  sqlite_note_repository.rs  sqlite_vault_repository.rs  system_clock.rs  xchacha_cipher.rs
src-tauri/src/ports/: cipher.rs  clock.rs  mod.rs  note_repository.rs  vault_repository.rs
src-tauri/src/state/: mod.rs
src/lib/: autosave.test.ts  autosave.ts
src/lib/tauri-client/: notes.test.ts  notes.ts
src/routes/: +page.svelte
